libs/pigment/KoColorSpaceMaths.h
@@ -278,6 +278,14 @@ public:
     inline static dst_compositetype clamp(dst_compositetype val) {
         return qBound<dst_compositetype>(KoColorSpaceMathsTraits<_Tdst>::min, val, KoColorSpaceMathsTraits<_Tdst>::max);
     }
+
+    /**
+     * Clamps the composite type on higher border only. That is a fast path
+     * for scale-only transformations
+     */
+    inline static _Tdst clampAfterScale(dst_compositetype val) {
+        return qMin<dst_compositetype>(val, KoColorSpaceMathsTraits<_Tdst>::max);
+    }
 };
 
 //------------------------------ double specialization ------------------------------//
