krita/ui/tests/filter_stroke_test.cpp
@@ -38,6 +38,9 @@ public:
     }
 
 protected:
+    using utils::StrokeTester::initImage;
+    using utils::StrokeTester::addPaintingJobs;
+
     void initImage(KisImageWSP image, KisNodeSP activeNode) {
         QImage src(QString(FILES_DATA_DIR) + QDir::separator() + "lena.png");
         activeNode->original()->convertFromQImage(src, 0);
